--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
-html {
+html{
     font-size: 62.5%;
     box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*, *::before, *::after{
     margin: 0;
     padding: 0;
     box-sizing: inherit;
 }
 
-.calculator {
-    border: 1px solid #ccc;
+.header{
+    margin: 10px;
+}
+
+
+.calculator{
+    border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
+    background-color: rgb(235, 233, 233);
 }
 
-.calculator-screen {
+.calculator-screen{
     width: 100%;
     font-size: 5rem;
     height: 80px;
@@ -31,54 +37,52 @@ html {
     padding-left: 10px;
 }
 
-button {
+button{
     height: 60px;
     background-color: #fff;
     border-radius: 3px;
-    border: 1px solid #c4c4c4;
-    background-color: transparent;
+    border: 1px solid #afafaf;
+    background-color: transparent white;
     font-size: 2rem;
     color: #333;
-    background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255,.05), inset 0 1px 0 0
-    rgba(255, 255, 255,.45), inset 0 -1px 0 0 rgba(255, 255, 255,.15), 0 1px 0 0
-    rgba(255, 255, 255,.15);
-    text-shadow: 0 1px rgba(255, 255, 255,.4);
+    background-image: linear-gradient(to bottom,transparent,transparent 50%, rgba(0,0,0,.04));
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255,255,255, .45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
+    text-shadow: 0 1px rgba(255,255, 255, .15);   
 }
 
-button:hover {
-    background-color: #eaeaea;
+button:hover{
+    background-color: #bbbbbb;
 }
 
-.operator {
+.operator{
     color: #337cac;
 }
 
-.all-clear {
+.all-clear{
     background-color: #f0595f;
     border-color: #b0353a;
     color: #fff;
 }
 
-.all-clear:hover {
-    background-color: #f17377;
+.all-clear:hover{
+   background-color: #f17377; 
 }
 
-.equal-sign {
-    background-color: #2e86c0;
-    border-color: #337cac;
+.equal-sign{
+    background-color: #25a8ff;
+    border-color: #afafaf;
     color: #fff;
     height: 100%;
-    grid-area: 2 / 4 / 6 / 5;
+    grid-area: 3 / 4 / 7 / 5;
 }
 
-.equal-sign:hover {
-    background-color: #4e9ed4;
+.equal-sign:hover{
+    background-color: #4eb8ff;
 }
 
-.calculator-keys {
+.calculator-keys{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4 ,1fr);
     grid-gap: 20px;
     padding: 20px;
 }
